--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 author:
   name             : "Kim Ji Soo :blush: "
   avatar           : ./assets/images/js2.jpg # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "고수는 인생이 놀이터다 👊"
+  bio              : "즐겨라 👊"
   location         : "Korea/Daegu"
   email            : 
   links:
