--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -45,3 +45,16 @@ docs:
         url: /category/PROGRAMMERS/
         category: "PROGRAMMERS"
   - title: "CS STUDY"
+    children:
+      - title: "이산 수학"
+        url: /category/MATH/
+        category: "MATH"
+      - title: "컴퓨터 구조"
+        url: /category/ARCHITECTURE/
+        category: "ARCHITECTURE"
+      - title: "운영체제"
+        url: /category/OS/
+        category: "OS"
+      - title: "네트워크"
+      url: /category/NETWORK/
+      category: "NETWORK"
